# simple-lock

./: .gitignore  .gitmodules  README.md  setup.py
c/: .clang-format  .gitignore  CMakeLists.txt  README.md  simple-lock.bpf.c  simple-lock.c  simple-lock.h
c/tools/vmlinux/x86/: vmlinux.600.h  vmlinux.h
python/: README.md
python/simple_lock/: cli.py  common.py  setup.py
python/simple_lock/resources/: simple-lock-companion.bpf.c
simple_lock/: monitor.py
